tests/unit/language/errors/invalid_path_error.arche
// RUN: %arche -o %t %s && %t

proc main() {
  let fd := arche_fopen_read("/nonexistent/path/to/file.csv");
  printf("open() returned fd=%d\n", fd);
  assert(fd == 0, "should fail to open nonexistent file\n");
  printf("Invalid path error test PASSED\n");
}
